--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -168,8 +168,8 @@
             "type":       "lldb",
             "request":    "launch",
             "preLaunchTask": "build-silver-ninja",
-            "program":    "${workspaceFolder}/install/lib/test",
-            "cwd":        "${workspaceFolder}/install/lib",
+            "program":    "${workspaceFolder}/install/debug/test2",
+            "cwd":        "${workspaceFolder}/install/debug",
             "env":      {
                 "VERBOSE": "1",
                 "LD_LIBRARY_PATH":"${workspaceFolder}/install/lib",
